crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_alias_missing_asname.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_alias_missing_asname.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..12,
        body: [
            Import(
                StmtImport {
                    node_index: 0,
                    range: 0..11,
                    names: [
                        Alias {
                            range: 7..11,
                            node_index: 0,
                            name: Identifier {
                                id: Name("x"),
                                range: 7..8,
                                node_index: 0,
                            },
                            asname: None,
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import x as
  |            ^ Syntax Error: Expected symbol after `as`
  |
